# IITH-BTECH-Courses

1st-Sem/ID1303 Introduction to Programming/: cs17btech11040_mean.c
2nd-Sem/CS1353 Introduction to Data Structures/: CS17BTECH11040_A4.cpp  CS17BTECH11040_Q1.cpp  CS17BTECH11040_Q2.cpp  CS17BTECH11040_Q3.cpp
3rd-Sem/: README.md
3rd-Sem/CS2233 Data Structures/: CS17BTECH11040_5.cpp  PriorityQueue.cpp  cs17btech11040_assignment2A.cpp
3rd-Sem/CS2323 Computer Architechture/Assembly/: amrstrong.asm  factorial-rec.asm  interpreter  interpreter.c  isprime.asm  output.txt
3rd-Sem/ID1303 Introduction to Programming/: cs17btech11040_mergesort.c
4th-Sem/: README.md
4th-Sem/CS2433  Principle of Programming Languages-II/: CS17BTECH11040.pl
5th-Sem/: README.md
5th-Sem/CS3530 Computer Networks I/: README.md
5th-Sem/CS6383 Introduction to Compiler Engineering/compass-7.29-do-not-assign-pointer-to-fixed-address/: CMakeLists.txt  matcher-Fixed-pointer.cpp  test.cpp
5th-Sem/Comp Network/a1/: client  (+8 more)
5th-Sem/Compiler Engineering/: Asgn0_CS17BTECH11040.bzip2  scev_data.tar.xz
6th-Sem/: README.md
6th-Sem/CS3543 Computer Networks II/: cmd.txt
6th-Sem/CS5040 Linear Optimization/: assignment1.py  assignment2.py
7th-Sem/: README.md
8th-Sem/: README.md
CS2233 Data Structures/: cs17btech11040.cpp  cs17btech11040_assignment2B.cpp
CS2323 Computer Architechture/Assembly/: CS17BTECH11050_ProgAssignment1.asm  factorial.asm  loadstore.asm  ramanujan.asm
CS3510 Operating Systems/Assgn1-cs17btech11040/: Assgn1Src-cs17btech11040.cpp
CS3510 Operating Systems/Assgn2-cs17btech11040/: Assgn2-ProcStat-cs17btech11040.cpp
Computer Arch/: AddressAccessSequence.txt
OS1/Assgn2-cs17btech11040/: Assgn2-ThStat-cs17btech11040.cpp  Assgn2Readme-cs17btech11040.txt
OS2/: Assgn1-EDFcs17btech11040  Assgn1-RMScs17btech11040  Assgn1-RMScs17btech11040.cpp  EDF-Log.txt  EDF-Stats.txt  RM-Stats.txt  RMS-Log.txt  edf  inp-params.txt  rms
POPL/CS17BTECH11040_P1/: application.e  sqmatrix.e
POPL/CS17BTECH11040_P2/: application.e
data structures/: CS17BTECH11040_3.cpp  CS17BTECH11040_4.cpp  CS17BTECH11040_6.cpp  CS17BTECH11040_7.cpp  CS17BTECH11040_8.cpp
id1303/: cs17btech11040_TA.c  cs17btech11040_insertion.c  cs17btech11040_palindrome.c  cs17btech11040_quicksort.c
(+305 files in other folders)
